--- a/src/components/Board/board.css
+++ b/src/components/Board/board.css
@@ -14,7 +14,8 @@
 .Playground {
   background: blue;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: (repeat(10, 1fr));
+  grid-template-columns: repeat(10, 1fr);
 }
 
 .Emoji {
