--- a/src/components/Board/board.css
+++ b/src/components/Board/board.css
@@ -1,18 +1,18 @@
 .Board {
   background: #c2c2c2;
-  width: 300px;
+  border: 5px solid #30336b;
 }
 
 .Header {
-  background: red;
-  padding: 10px 12px;
+  background: #30336b;
+  padding: 20px 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 80px;
 }
 
 .Playground {
-  background: blue;
   display: grid;
   grid-template-rows: (repeat(10, 1fr));
   grid-template-columns: repeat(10, 1fr);
@@ -25,4 +25,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #130f40;
+  padding: 10px;
+  cursor: grab;
+}
+
+.Emoji:hover {
+  border: 2px solid #95afc0;
+  border-radius: 1px;
+}
+
+.Emoji span {
+  font-size: 50px;
 }
