--- a/src/components/Cell/cell.css
+++ b/src/components/Cell/cell.css
@@ -1,14 +1,16 @@
 .Cell {
-  width: 30px;
-  height: 30px;
-  background: yellow;
-  border: 1px black;
-  border-style: solid;
+  width: 50px;
+  height: 50px;
+  background: #c7ecee;
+  border: 1px solid #dff9fb;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: grab;
+  font-size: 1.3em;
+  font-weight: 700;
 }
 
 .Cell.open {
-  background: red;
+  background: #ff7979;
 }
