--- a/src/components/Scores/scores.css
+++ b/src/components/Scores/scores.css
@@ -1,10 +1,11 @@
 .Scores {
   width: 100px;
   height: 50px;
-  color: red;
-  background: black;
+  color: #dff9fb;
   justify-content: center;
   align-items: center;
   display: flex;
-  font-size: 40px;
+  text-align: center;
+  font-weight: 100;
+  font-size: 1.5em;
 }
